  
Check if file exists in xcmsRaw()
Plot (log) colored data points in plotRaw()  

Modified findPeaks method:
  - Moved column "i" (peak number within combined EIC) to the second-to-last column
  - Added column "sn" with signal to noise ratio
xcmsSets now include "i" and "sn" columns in the peaks matrix

Updated Windows NetCDF library to version 3.6.2 (now statically linked into xcms.dll)

2006-04-27: 1.6.1 & 1.7.0

Bioconductor release 1.9 and development branch 2.0
Fixed documentation and DESCRIPTION file for R 2.4.0 package check

2006-08-24: 1.5.2

Fixed bug where xcmsSet() failed if less than 2 peaks were detected in a file
Added warning to xcmsSet() if less than 10 peaks were detected in a file

2006-05-09: 1.5.1

Fixed bug where NetCDF files would have their scans incorrectly reversed
Merged recent changes to RAMP mzXML/mzData parser to support TimeInMinutes

2006-04-27: 1.4.0 & 1.5.0

Bioconductor release 1.8 and development branch 1.9
No changes to code or functionality from 1.3.2

2006-02-25: 1.3.2

Blank spectra in mzXML and mzData files are now ignored
EIC width can now be specified in diffreport()
Better error reporting in getEIC()
Fixed rare problem in getEIC()

2005-12-07: 1.3.1

Added support for reading mzData files
Only full-scan spectra are read from mzXML files
The group() function now returns only unique, non-overalpping peak groups
Replaced clustunique utility function with C implementation: rectUnique

2005-10-14: 1.2.0 & 1.3.0

Bioconductor release 1.7 and development branch 1.8
No changes to code or functionality from 1.1.6

2005-08-26: 1.1.6

Fixed bug in plotPeaks()
Updated for compatibility with R 2.2.0

2005-08-23: 1.1.5

Improved peak identification to return full precision masses
regardless of EIC step size

2005-08-16: 1.1.4

Added mzXML raw data import
Added linear alignment method to retcor()
Added check for too small span in retcor()
Created CHANGELOG

2005-08-11: 1.1.3

Added xcmsEIC class
Added groupNames method to xcmsSet